WordPress I18N triggered by commit 06d5b80e808adcc3b013e3a5d7fd3091f3c4641a

--- a/languages/wp-plugin-web.pot
+++ b/languages/wp-plugin-web.pot
@@ -83,7 +83,7 @@ msgid "Please update now"
 msgstr ""
 
 #: inc/Admin.php:190
-msgid "Thank you for creating with <a href=\"https://wordpress.org/\">WordPress</a> and <a href=\"https://web.com/about\">Web.com</a>."
+msgid "Thank you for creating with <a href=\"https://wordpress.org/\">WordPress</a> and <a href=\"https://web.com/about-us\">Web.com</a>."
 msgstr ""
 
 #: inc/AdminBar.php:35
