WordPress I18N triggered by commit 800ed094bfa1e8835c2dc9e9b7517740df736e3c

--- a/languages/wp-plugin-web.pot
+++ b/languages/wp-plugin-web.pot
@@ -50,7 +50,7 @@ msgstr ""
 
 #. translators: %1$s is replaced with the opening link tag and %2$s is replaced with the closing link tag, %3$s is the opening link tag to preview the page, %4$s is the closing link tag.
 #: bootstrap.php:71
-msgid "Your site is currently displaying a %3$s\"Coming Soon\" page%4$s. Once you are ready, %1$slaunch your site%2$s."
+msgid "Your site is currently displaying a %3$sComing Soon page%4$s. Once you are ready, %1$slaunch your site%2$s."
 msgstr ""
 
 #: inc/Admin.php:42
